--- a/Modeler/example/index.html
+++ b/Modeler/example/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Security BPMN Modeler</title>
+  <title>BPMN Modeling and Simulation</title>
 
   <link rel="stylesheet" href="./style.css" />
 
@@ -11,10 +11,10 @@
 
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="CEP4BPMSec" />
-  <meta property="og:title" content="Security BPMN Modeler" />
-  <meta property="og:url" content="https://github.com/ajvarela/caise2025" />
-  <meta property="og:description" content="A Bpmn modeler and simulator with Security elements" />
+  <meta property="og:site_name" content="SimBPMN" />
+  <meta property="og:title" content="BPMN Modeling and Simulation" />
+  <meta property="og:url" content="https://github.com/Joaquin-Arregui/SimBPMN" />
+  <meta property="og:description" content="A Bpmn modeler and simulator with colaboration and multi-instance elements." />
 
   <style>
     html,
@@ -42,14 +42,14 @@
   </style>
 </head>
 <body>
-  <h1>Modeling security engine</h1>
+  <h1>BPMN Modeling and Simulation</h1>
 
   <p>
-    A Bpmn modeler and simulator with Security elements. Check out the project <a href="https://github.com/ajvarela/caise2025">on GitHub</a>.
+    A Bpmn modeler and simulator with colaboration and multi-instance elements. Check out the project <a href="https://github.com/Joaquin-Arregui/SimBPMN">on GitHub</a>.
   </p>
 
   <p style="margin-top: 3em">
-    <a class="link" href="modeler.html">Open new Model</a> or <a class="link" href="openExampleModel.html">Open an example Model</a>
+    <a class="link" href="modeler.html">Open New Model</a> or <a class="link" href="openExampleModel.html">Open Existing Model</a>
   </p>
 </body>
 </html>
